# Traintools

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  POST.md  README.md  SECURITY.md  demo.py  demo_free_gns.py  llms-full.txt  llms.txt  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: config.yml  diagnostic-report.yml
.github/workflows/: ci.yml
benchmarks/ptdb_v1/: CORRECTION_LOG.md  FULL_RUN_PLAN.md  README.md  RUN_LOG.md
benchmarks/ptdb_v1/kaggle/full/: README.md  validate_shard.py
benchmarks/ptdb_v1/kaggle/full/cifar10/: kernel-metadata.json  ptdb_v1_full.py
benchmarks/ptdb_v1/kaggle/full/cifar100/: kernel-metadata.json  ptdb_v1_full.py
benchmarks/ptdb_v1/kaggle/full/cifar100_resnet18/: kernel-metadata.json  ptdb_v1_full.py
benchmarks/ptdb_v1/kaggle/full/cifar100_vit_tiny/: kernel-metadata.json  ptdb_v1_full.py
benchmarks/ptdb_v1/kaggle/full/cifar100_wrn28_2/: .gitignore  kernel-metadata.json  ptdb_v1_full.py
benchmarks/ptdb_v1/kaggle/full/cifar10_resnet18/: kernel-metadata.json
benchmarks/ptdb_v1/kaggle/full/cifar10_vit_tiny/: kernel-metadata.json  ptdb_v1_full.py
benchmarks/ptdb_v1/kaggle/full/svhn_resnet18/: kernel-metadata.json  ptdb_v1_full.py
benchmarks/ptdb_v1/kaggle/full/svhn_vit_tiny/: kernel-metadata.json  ptdb_v1_full.py
benchmarks/ptdb_v1/kaggle/full/svhn_wrn28_2/: kernel-metadata.json  ptdb_v1_full.py
benchmarks/ptdb_v1/kaggle/pilot/: .gitignore  benchmark_config.json  kernel-metadata.json  ptdb_v1.py  validate_pilot.py
benchmarks/ptdb_v1/results/: CIFAR10_WRN28_2.md  TIMING_PILOT.md
benchmarks/ptdb_v1/results/timing_pilot_v5/ptdb_v1_pilot/: epoch_metrics.csv  manifest.json  manifest.started.json  paired_noninterference.csv  pilot_validation.json  run_summary.csv  timing_projection.json
docs/: README.md
docs/problems/: choose-batch-size.md  debug-gradients.md  diagnose-plateau.md  find-bad-labels.md  inspect-batches.md  stop-training.md
examples/: agent_recommendation.py  diagnose_existing_loop.py  json_report.py
launch/: AGENT_READY_POST.md  ORGANIC_ADOPTION_PLAN.md  RELEASE_0_6_0.md  RELEASE_0_6_1.md  RELEASE_0_6_2.md
schemas/: recommendation.schema.json  report-envelope.schema.json
tests/: test_agent_interface.py  test_aum_importance_collapse.py  test_batch.py  test_confusion.py  test_dynamics.py  test_earlyguard.py  test_gradhealth.py  test_gradnoise.py  test_plasticity.py  test_stress.py
tools/: export_agent_assets.py
traintools/: __init__.py  aum.py  batch.py  capabilities.py  cli.py  collapse.py  confusion.py  dynamics.py  earlyguard.py  gradhealth.py  gradnoise.py  importance.py  mcp_server.py  plasticity.py  reporting.py
traintools/callbacks/: __init__.py  huggingface.py  pytorch.py
traintools/data/: capabilities.json
