[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traintools"
version = "0.6.1"
description = "Agent-ready, paper-backed PyTorch training diagnostics for gradients, batches, data quality, plasticity, and stopping"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Aparajeet S" }]
keywords = ["pytorch", "machine-learning", "training", "diagnostics", "optimizer", "debugging", "dataset-quality", "gradient-noise-scale", "early-stopping", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
full = ["scipy", "numpy", "matplotlib"]
hf = ["transformers>=4.30"]
mcp = ["mcp>=1.2"]
dev = ["pytest", "scipy", "numpy", "matplotlib", "transformers>=4.30"]

[project.scripts]
traintools = "traintools.cli:main"
traintools-mcp = "traintools.mcp_server:main"

[project.urls]
Homepage = "https://github.com/AparajeetS/Traintools"
Source = "https://github.com/AparajeetS/Traintools"
Issues = "https://github.com/AparajeetS/Traintools/issues"
PyPI = "https://pypi.org/project/traintools/"

[tool.setuptools.packages.find]
where = ["."]
include = ["traintools*"]

[tool.setuptools.package-data]
traintools = ["data/*.json"]
